--- a/navigation.yml
+++ b/navigation.yml
@@ -1,1 +1,10 @@
-
+- title: Home
+  url: /about.html
+- title: Team
+  url: /team.html
+- title: Contact
+  url: /contact.html
+- title: Store
+  url: /store.html
+- title: Support
+  url: /support.html
