lost the pages somehow

--- a/_config.yml
+++ b/_config.yml
@@ -28,8 +28,10 @@ plugins:
 
   - jekyll-feed
 
-# Exclude from processing.
-# The following items will not be processed, by default. Create a custom list
-# to override the default setting.
-# exclude: 
-
+exclude:
+  - .gitignore
+  - Gemfile
+  - Gemfile.lock
+  - LICENSE.txt
+  - massively_jekyll_theme.gemspec
+  - _site/
