populating content, added program page

--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -4,6 +4,9 @@
 - title: "Schedule"
   href: "/schedule/"
 
+- title: "Program"
+  href: "/program"
+
 - title: "Local Arrangements"
   href: "/local/"
 
