--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@
 
 title: DLI Ontario
 #email: your-email@example.com
-description:  # this means to ignore newlines until "baseurl:"
+description:  2019 Training & Workshop
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://dliontario.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: 
